--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,39 +6,40 @@ body {
     -webkit-text-stroke-width: .5px;
     -webkit-text-stroke-color: black;
     text-align: center;
+    position: relative;
     background-color: #f0e8c5;
-    width: 50%;
-    max-width: 400px;
     margin:auto;
    
   }
 
   h1{color:#ffffff;
     font-family: Arial;
-    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: black;
     text-align: center;
     margin:auto;
-    position: fixed;
+    position: relative;
     z-index: 2;
 
   }
   h2{color:#ffffff;
     font-style: italic;
     font-family: Arial;
-    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-width: 1.2px;
     -webkit-text-stroke-color: black;
     text-align: center;
-    width: 50%;
-    max-width: 400px;
     margin:auto;
-    position: fixed;
+    position: relative;
+    margin-top: 2px;
+    margin-bottom: 2px;
     z-index: 2;
 
   }
   
+  
   div {
-    margin-top: 15px;
+    margin-top: 50px;
+    margin-bottom: 50px;
   }
   
   #bg {
